Clean up comments, fix clipping bug for inline edit rowaction menu

--- a/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
+++ b/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@@ -126,12 +126,7 @@ $edit-icon-font-size: 18px;
 
     .cellWrapper {
         width: 100%;
-        //this adjusts the height for rendered rows
         padding-top: 6px;
-        //Turns out it works better without a min width
-        //Min width of 200px sets the rendered rows to 200 px minimum
-        //min-width: 200px;
-        //min-height: 32px;
         position: relative;
 
         &.numberFormat,
@@ -273,16 +268,13 @@ $edit-icon-font-size: 18px;
 }
 
 .qbGrid > tbody > tr > td {
-    //Added padding-left and padding-right to match the AGGrid view layout
+    height: 32px;
     padding-left: 6px;
     padding-right: 6px;
     vertical-align: top;
     font-size: $grid-font-size;
     border-right: 1px solid $color-black-300;
     border-bottom: 1px solid $color-black-300;
-    //This is commented out because the texts below an inline edit was overlapping, this pushes it down a little bit
-    //no more overlap
-    //vertical-align: top;
 }
 
 .qbGrid > tbody > tr > td:first-of-type {
@@ -307,20 +299,13 @@ $edit-icon-font-size: 18px;
     }
 
     > td {
-        //This adds border back to the bottom of inline edit
-        //border: none;
         border-top: 2px solid $cell-edit-background-edit;
         overflow: visible;
         margin: 0;
-        //vertical-align: middle;
         border-right: 1px solid $row-border-color;
-        //Commented out because in-line edit row is too big, this makes the height smaller
-        //padding-bottom: 14px;
 
         .cellWrapper {
             display: flex;
-            //Commented out to make the rows smaller in height
-            //padding: 2px;
             top: 0;
             left: 0;
             right: 0;
@@ -335,8 +320,6 @@ $edit-icon-font-size: 18px;
 
             &.editingCell {
                 display: inline-block;
-                //border: none;
-                //This aligns input boxes to the top for inline edit and it adds padding to the bottom
                 padding-bottom: 20px;
                 margin-top: -6px;
 
@@ -473,8 +456,6 @@ $edit-icon-font-size: 18px;
 
 .multiLineTextCell {
     border: 0;
-    //margin: 0;
-    //margin-bottom: -90px;
     font-family: $font-family;
     font-size: $grid-font-size;
     border-radius: 0;
@@ -492,12 +473,11 @@ $edit-icon-font-size: 18px;
     z-index: 3;
 }
 
-// first column td z-index is 1000
 th.qbHeaderCell.stickyCell {
     z-index: 3;
 }
 
-.dropdown-menu {
+.stickyCell .dropdown-menu {
     top: 0;
     left: 27px;
 }
